src/objects/Manufacturing_Site__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Manufacturing Sites</relationshipLabel>
        <relationshipName>Manufacturing_Sites_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA-PAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturing_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Manufacturing Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Site_Head__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>